[gd_scene load_steps=2 format=3 uid="uid://cdefamk8oiv45"]

[ext_resource type="Script" path="res://nanogame_player/nanogame_player.gd" id="1"]

[node name="NanogamePlayer" type="SubViewportContainer"]
process_mode = 1
stretch = true
script = ExtResource("1")

[node name="NanogameViewport" type="SubViewport" parent="."]
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(2, 2)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Kickoff" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="Goal" type="Timer" parent="."]
process_mode = 1
wait_time = 6.0
one_shot = true

[node name="Victory" type="Timer" parent="."]
process_mode = 1
one_shot = true

[node name="Failure" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Kickoff" to="." method="_on_kickoff_timeout"]
[connection signal="timeout" from="Goal" to="." method="_on_goal_timeout"]
[connection signal="timeout" from="Victory" to="." method="_win_nanogame"]
[connection signal="timeout" from="Failure" to="." method="_lose_nanogame"]
